+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.7 alpha 1
================================

*Release date: XX-XXX-20XX*

Core and Builtins
-----------------

- Removed _PyOS_double_to_string. Use PyOS_double_to_string
  instead. This is in preparation for (but not strictly related to)
  issue #7117, short float repr.

- Issue #1087418: Boost performance of bitwise operations for longs.

- Issue #1722344: threading._shutdown() is now called in Py_Finalize(), which
  fixes the problem of some exceptions being thrown at shutdown when the
  interpreter is killed. Patch by Adam Olsen.

- Issue #7168: Document PyFloat_AsString and PyFloat_AsReprString, and
  note that they are unsafe and deprecated.

- Issue #7120: logging: Removed import of multiprocessing which is causing
  crash in GAE.

- Issue #7140: The __dict__ of a module should not be cleared unless the module
  is the only object holding a reference to it.

- Issue #1754094: Improve the stack depth calculation in the compiler.
  There should be no other effect than a small decrease in memory use.
  Patch by Christopher Tur Lesniewski-Laas.

- Issue #7084: Fix a (very unlikely) crash when printing a list from one
  thread, and mutating it from another one.  Patch by Scott Dial.

- Issue #1571184: The Unicode database contains properties for more characters.
  The tables for code points representing numeric values, white spaces or line
  breaks are now generated from the official Unicode Character Database files,
  and include information from the Unihan.txt file.

- Issue #7050: Fix a SystemError when trying to use unpacking and augmented
  assignment.

- Issue #5329: Fix os.popen* regression from 2.5 with commands as a
  sequence running through the shell.  Patch by Jean-Paul Calderone
  and Jani Hakala.

- Issue #7019: Raise ValueError when unmarshalling bad long data, instead